src/objects/POP_History__c.object
<CustomObject>
    <description>Capturing Publication&apos;s Issue Date</description>
    <fields>
        <fullName>Publication_Code__c</fullName>
        <description>Publication Code</description>
        <formula>Publication__r.Publication_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Publication Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Publication_Issue_Date__c</fullName>
        <description>Publication Issue Date</description>
        <label>Publication Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Publication__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Publication</description>
        <label>Publication</label>
        <referenceTo>Publication__c</referenceTo>
        <relationshipLabel>POP History</relationshipLabel>
        <relationshipName>POP_History</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>POP History</label>
    <nameField>
        <displayFormat>PUBPOP-{00000000}</displayFormat>
        <label>POP History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>POP History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>